--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 ios/Flutter/flutter_export_environment.sh
+
+.flutter-plugins-dependencies
